[gd_scene load_steps=2 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://src/main.gd" id="1_main"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="GameContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 1)

[node name="CenterContainer" type="CenterContainer" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="MenuContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "SAKTRIS"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="MenuContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Chess meets Tetris"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MenuContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="MenuContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="TwoPlayerButton" type="Button" parent="MenuContainer/CenterContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Two Player"

[node name="VsComputerButton" type="Button" parent="MenuContainer/CenterContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Vs Computer"

[node name="PlayOnlineButton" type="Button" parent="MenuContainer/CenterContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Play Online"

[node name="Credit" type="Label" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "Game idea by Tomas Günther™"
horizontal_alignment = 1
